Truncate string attributes in the accessibility tree

Adds the helper function
BlinkAXTreeSource::TruncateAndAddStringAttribute, which truncates string
attributes when Blink's tree is serialized for accessibility. String
attributes are truncated at BlinkAXTreeSource::kMaxStringAttributeLength
bytes, currently set to 10000 bytes.

Bug: 644805
Change-Id: Ibd1af03a77814aa524dcb067ad1be3f3f4291c8b
Reviewed-on: https://chromium-review.googlesource.com/1113946
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: James Wallace-Lee <jamwalla@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570818}